2010-11-17  Adam Roben  <aroben@apple.com>

        Move FindSafari's settings into a vsprops file

        Fixes <http://webkit.org/b/49699> FindSafari should use a vsprops file

        Reviewed by Steve Falkenburg.

        * FindSafari/FindSafari.vcproj:
        * FindSafari/FindSafariCommon.vsprops: Added.

2010-11-17  Adam Roben  <aroben@apple.com>

        Use a minimum font size of 0 in DRT on Windows

        This is the Windows equivalent of r72164.

        Rubber-stamped by Dave Hyatt.

        * DumpRenderTree/win/DumpRenderTree.cpp:
        (resetDefaultsToConsistentValues):

2010-11-17  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Andreas Kling.

        webkit-patch pretty-diff shouldn't need to be run from a checkout root in git
        https://bugs.webkit.org/show_bug.cgi?id=49639

        * Scripts/webkitpy/common/checkout/scm.py:

2010-11-17  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Tony Chang.

        Rebaseline server: add loupe for image diffs
        https://bugs.webkit.org/show_bug.cgi?id=49692
        
        Add a loupe (magnifiying glass) for inspecting image diffs. Shows an
        enlarged area of the expected, actual and diff images side by side.

        * Scripts/webkitpy/tool/commands/data/rebaselineserver/index.html:
        * Scripts/webkitpy/tool/commands/data/rebaselineserver/loupe.js: Added.
        * Scripts/webkitpy/tool/commands/data/rebaselineserver/main.js:
        * Scripts/webkitpy/tool/commands/rebaselineserver.py:

2010-11-17  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Adam Roben.

        WebKitLauncherWin should use vsprops for shared build settings
        https://bugs.webkit.org/show_bug.cgi?id=49696

        * WebKitLauncherWin/WebKitLauncherWin.vcproj:
        * WebKitLauncherWin/WebKitLauncherWinCommon.vsprops: Added.

2010-11-17  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Adam Roben.
